# evian_follow

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: follow.rs  intake.rs  lib.rs  vision.rs
src/util/: differentiate.rs  ema.rs  mod.rs
src/vision/: filters.rs  mod.rs  sorters.rs
