[package]
name = "evian_follow"
version = "0.1.0"
edition = "2024"

[dependencies]
evian = { git = "https://github.com/vexide/evian.git" }
vexide = "0.8.0"
simple_moving_average = "1.0.2"
anyhow = "1.0.102"
tracing = { version = "0.1.44", default-features = false }
vexide-motorgroup = "2.2.0"
impl-trait-for-tuples = "0.2.3"

[lints.clippy]
# pedantic lints
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
missing_docs_in_private_items = "deny"
pedantic = "deny"
undocumented_unsafe_blocks = "deny"

# no panic lints
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
todo = "deny"
indexing_slicing = "deny"
unreachable = "deny"

# reliability lints
infinite_loop = "deny"
mem_forget = "deny"
await_holding_lock = "deny"

[lints.rust]
# pedantic lints
missing_docs = "deny"
